Forces default gray background on .header-media to ensure white and black text is still readable when media fails to load

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -23,6 +23,7 @@
 }
 
 .header-media {
+  background-color: $gray;
   height: 100%;
   position: relative;
 
